--- a/testHTML/midiInKeyChordsSelectable.html
+++ b/testHTML/midiInKeyChordsSelectable.html
@@ -39,10 +39,10 @@
             k.appendKeyboard(kd); // 37key keyboard
 
 		    music21.webmidi.createSelector($("#putMidiSelectHere"));
-		    music21.webmidi.callBacks.general = [music21.miditools.makeChords, 
+		    music21.miditools.callBacks.general = [music21.miditools.makeChords, 
 		                                          music21.miditools.sendToMIDIjs,
 		                                          music21.keyboard.jazzHighlight.bind(k)];
-		    music21.webmidi.callBacks.sendOutChord = appendElement;
+		    music21.miditools.callBacks.sendOutChord = appendElement;
 		    
 		});		
 		</script>
