--- a/testHTML/showKeyboard.html
+++ b/testHTML/showKeyboard.html
@@ -73,25 +73,25 @@
                                        music21.keyboard.jazzHighlight.bind(k)];
 
             music21.webmidi.createSelector($("#putMidiSelectHere"));
-            music21.webmidi.callBacks.general = midiCallbacksPlay;
-            music21.webmidi.callBacks.sendOutChord = appendElement;
+            music21.miditools.callBacks.general = midiCallbacksPlay;
+            music21.miditools.callBacks.sendOutChord = appendElement;
 		    
             $('#markC').bind('click', function () { k.markC = this.checked; k.redrawSVG() })
             $('#showNames').bind('click', function () { k.showNames = this.checked; k.redrawSVG() })
             $('#showOctaves').bind('click', function () { k.showOctaves = this.checked; k.redrawSVG() })
             $('#playSound').bind('click', function() {
                 if (this.checked) {
-                    music21.webmidi.callBacks.general = midiCallbacksPlay;
+                    music21.miditools.callBacks.general = midiCallbacksPlay;
                 } else {
-                    music21.webmidi.callBacks.general = midiCallbacksNoPlay;
+                    music21.miditools.callBacks.general = midiCallbacksNoPlay;
                 }
             });
             $('input[type=radio][name=staffNumberSelector]').change(function() {
                 if (this.value == 'singleStaff') {
-                    music21.webmidi.callBacks.sendOutChord = appendElement;
+                    music21.miditools.callBacks.sendOutChord = appendElement;
                 }
                 else if (this.value == 'grandStaff') {
-                    music21.webmidi.callBacks.sendOutChord = appendElementGrandStaff;
+                    music21.miditools.callBacks.sendOutChord = appendElementGrandStaff;
                 } else {
                     console.log("What value is this? " + this.value);
                 }
