qUnit tests working on qUnit 2 and from grunt!

--- a/tests/index.html
+++ b/tests/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Music21 QUnit Tests</title>
-  <link rel="stylesheet" href="../src/ext/qUnit/qunit-1.12.0.css">
+  <link rel="stylesheet" href="qUnit/qunit-2.0.1.css">
 </head>
 <body>
   <div id="qunit"></div>
