--- a/testHTML/roundCanon.html
+++ b/testHTML/roundCanon.html
@@ -54,7 +54,7 @@ fillScoreOut = function (editor, scoreOut) {
 		}
 		scoreOutNew.append(p)
 	}
-	//$($('canvas')[1]).attr('height', '3000').attr('width', '700');
+	$($('canvas')[1]).attr('height', '600'); //.attr('width', '550');
 	scoreOutNew.redrawCanvas($('canvas')[1]);
 };
 
