--- a/testHTML/audioSearchTest.html
+++ b/testHTML/audioSearchTest.html
@@ -4,7 +4,7 @@
  <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
    <script>
-   require(['music21', 'music21/audioSearch'], function (music21, as) {
+   require(['music21'], function (music21) {
        nnn = new music21.note.Note("C4");
        nnn.duration.type = 'whole';
        sss = new music21.stream.Stream();
@@ -19,20 +19,20 @@
        $counter = $('#counter');
        $('#bassClef').on('click', function () {
            sss.clef = new music21.clef.Clef('bass');
-           as.minFrequency = new music21.pitch.Pitch('F2').frequency;
-           as.maxFrequency = new music21.pitch.Pitch('F4').frequency;       
+           music21.audioSearch.minFrequency = new music21.pitch.Pitch('F2').frequency;
+           music21.audioSearch.maxFrequency = new music21.pitch.Pitch('F4').frequency;       
            sss.replaceCanvas();
        })
        $('#trebleClef').on('click', function () {
            sss.clef = new music21.clef.Clef('treble');
-           as.minFrequency = new music21.pitch.Pitch('G3').frequency;
-           as.maxFrequency = new music21.pitch.Pitch('A5').frequency;
+           music21.audioSearch.minFrequency = new music21.pitch.Pitch('G3').frequency;
+           music21.audioSearch.maxFrequency = new music21.pitch.Pitch('A5').frequency;
            sss.replaceCanvas();
        })
        var lastNote = 0;
        var lastLeft = 150;
        sampleCallback = function(frequency) {
-           var _ = as.smoothPitchExtraction(frequency),
+           var _ = music21.audioSearch.smoothPitchExtraction(frequency),
                       midiNum = _[0],
                       centsOff = _[1];
 	       if (midiNum != -1) {
@@ -59,7 +59,7 @@
 	                   .css('left', lastLeft.toString() + 'px');
 	       }                        
        };
-       as.sampleCallback = sampleCallback;
+       music21.audioSearch.sampleCallback = sampleCallback;
        
    });
    </script>
