--- a/testHTML/es6.html
+++ b/testHTML/es6.html
@@ -2,5 +2,19 @@
 <script src="../ext/require/require.js" data-main="../src/music21"></script>
 </head>
 <body>
-Hi
+Pure ES6 tests...
+
+<script>
+require(['music21'], (music21) => {
+    const s = new music21.stream.Stream()
+    const n = new music21.note.Note()
+    s.append(n);
+    let canvas;
+    s.renderOptions.events.click = e => { 
+        n.pitch.diatonicNoteNum += 1; 
+        canvas = s.replaceCanvas(canvas); 
+    }
+    canvas = s.appendNewCanvas();
+});
+</script>
 </body>
