add babel polyfill: "for x of Array"

--- a/testHTML/delayMic.html
+++ b/testHTML/delayMic.html
@@ -59,7 +59,8 @@
 <body style='text-align: left;'>
 <div style='padding-left: 20px; background-color: white'>
 <h1>A canon for Stacey</h1>
-<h2>Works on Chrome and Firefox (recent) only.</h2>
+<h2>Works on Chrome and Firefox only.</h2>
+<p>
 <div>
 <button id='startListening'>Start</button>
 <button id='stopListening'>Stop Listening</button>
