--- a/testHTML/demo-Cuthbert.html
+++ b/testHTML/demo-Cuthbert.html
@@ -60,7 +60,7 @@ require(['music21'], drawMe);
 </body>
 This was the oldest/first experiment with music21j, from summer 2013.  Updated so it still works.<br/>
 Only for historical nostalgia...
-<input type="button" onClick="playNote(60)" value="clickMe" />
-<input type="button" onClick="refreshMe()" value="playSeventy" /><br />
+<input type="button" onclick="playNote(60)" value="clickMe" />
+<input type="button" onclick="refreshMe()" value="playSeventy" /><br />
 <input type="text" value="E_2 F_1.5 G_.5 E_2" id="textId" onchange="renderIt()"/>
 </html>
