refactor to single page

--- a/testHTML/recordAudio.html
+++ b/testHTML/recordAudio.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="../../ext/require/require.js" data-main="../../src/music21"></script>
+    <script src="../ext/require/require.js" data-main="../src/music21"></script>
     <style>
     canvas {
         display: inline-block; 
