--- a/tests/gruntTest.html
+++ b/tests/gruntTest.html
@@ -7,6 +7,7 @@
   <script src="qUnit/qunit-2.0.1.js"></script>
   <script src="../src/ext/jquery/jquery-2.1.1.min.js"></script>
   <script src="../src/ext/jsonpickle/build/jsonpickle.debug.js"></script>
+  <script src="../src/ext/polyfill.js"></script>
   <script src="../src/ext/midijs/build/MIDI.js"></script>
   <script src="../src/ext/vexflow/vexflow-debug.js"></script>
   <script src="../build/music21.debug.js" charset="utf-8"></script>
