--- a/testHTML/audioSearchGame.html
+++ b/testHTML/audioSearchGame.html
@@ -1,7 +1,7 @@
 <html><head>
 <title>Match pitches</title>
    <script data-main="../src/music21" src="../ext/require/require.js"></script>
- <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
+ <link rel="stylesheet" href="https://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
    <script>
    require(['music21'], function (music21) {
