upgrade jQuery; requireTest (should not be in music21j...)

--- a/testHTML/requireTest.html
+++ b/testHTML/requireTest.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
 	 <title>Require Test for Music21j</title>
-	 <script data-main="../src/m21theory.js" src="../ext/require/require.js"></script>
+	 <script data-main="../src/artusi.js" src="../ext/require/require.js"></script>
      <script>
-     require(['m21theory'], function() {
+     require(['artusi'], function() {
 	    var n = new music21.note.Note("B4");
 	    n.duration.type="half";
 	    var n2 = new music21.chord.Chord(["F#4", "A#4","C5"]);
@@ -15,13 +15,13 @@
 
 	    var k = new music21.key.Key('C#');
 	    s.keySignature = k;
-	    s.appendNewCanvas();    
-	
-	    var TB = new m21theory.bank.TestBank();
-	    var itClass = m21theory.tests.keySignature;
+	    s.appendNewCanvas();
+
+	    var TB = new artusi.bank.TestBank();
+	    var itClass = artusi.tests.keySignature;
 	    it = new itClass();
 	    TB.append(it);
-	    it = m21theory.tests.get('intervalTraining');
+	    it = artusi.tests.get('intervalTraining');
 	    TB.append(it);
 	    TB.render();
      });
