--- a/testHTML/counterpointTest.html
+++ b/testHTML/counterpointTest.html
@@ -19,8 +19,10 @@
          m2.append( new music21.note.Note('G2') );
 
          var p = new music21.stream.Part();
-         p.append(m);
-         p.append(m2);
+         for (let i = 0; i < 12; i++) {
+             p.append(m.clone(true));
+             p.append(m2.clone(true));
+         }
 
          var m3 = new music21.stream.Measure();
          m3.append( new music21.note.Note('G2') );
@@ -33,9 +35,10 @@
          m4.append( new music21.note.Note('G2') );
 
          var p2 = new music21.stream.Part();
-         p2.append(m3);
-         p2.append(m4);
-
+         for (let i = 0; i < 12; i++) {
+             p2.append(m3.clone(true));
+             p2.append(m4.clone(true));
+         }
 
          s = new music21.stream.Score();
          s.timeSignature = '3/4';
